--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -37,7 +37,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      prefetchEffective 
      parallelchain 
      ksettest 
-     fixedMatchTest )
+     fixedMatchTest 
+     poolThreadRaftManip )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
