added some test cases to test out the return type. still not satisfied with the graph building as it limits some of the possible combinations, will annotate in the documentation what combinations of operators are allowed for now and if there is interest we can expand in the future.

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -38,7 +38,12 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      parallelchain 
      ksettest 
      fixedMatchTest 
-     splitchainRetStruct )
+     splitchainRetStruct 
+     staticContJoinRetStruct
+     staticJoinRetStruct
+     staticLongSplitChainRetStruct
+     staticSplitChainJoinRetStruct
+     staticSplitJoinRetStruct )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
