--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,12 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      parallelchain 
      ksettest 
      fixedMatchTest
-     splitchainRetStruct ) 
+     splitchainRetStruct
+     staticContJoinRetStruct
+     staticJoinRetStruct 
+     staticLongSplitChainRetStruct
+     staticSplitChainJoinRetStruct
+     staticSplitJoinRetStruct ) 
 
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
