a few cleanup updates, turning back on basic parallel scheduling, update to pool schedule to enable dynamically adding kernels, need thought into adding destination nodes or not

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      staticJoinRetStruct 
      staticLongSplitChainRetStruct
      staticSplitChainJoinRetStruct
-     staticSplitJoinRetStruct ) 
+     staticSplitJoinRetStruct 
+     chainMultiplePorts ) 
 
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
