--- a/examples/cppalgo/search/CMakeLists.txt
+++ b/examples/cppalgo/search/CMakeLists.txt
@@ -24,7 +24,8 @@ add_executable( ${APP} "${APP}.cpp" )
 include_directories( ${CMAKE_SCOTCH_INCS} )
 
 target_link_libraries( ${APP} 
-                       raft                       
+                       raft
+                       shm
                        ${CMAKE_THREAD_LIBS_INIT} 
                        ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_RT_LIBS}
