--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,14 +21,17 @@ include( CheckSTD )
 file( GLOB_RECURSE CPP_SRC_FILES *.cpp )
 file( GLOB_RECURSE C_SRC_FILES   *.c   )
 
+
 add_library( raft 
              ${CPP_SRC_FILES} 
-             ${C_SRC_FILES}   )
+             ${C_SRC_FILES} )
 
 target_link_libraries( 
-                       raft 
+                       raft
+                       PUBLIC
                        ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_QTHREAD_LIBS} 
+                       shm
                      )
 
 
