still updating towards beta release...now integrating better parser and graph processing algorithm

--- a/examples/general/multiply/CMakeLists.txt
+++ b/examples/general/multiply/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package( Threads )
 # check for Scotch, use if there
 ##
 find_package( Scotch )
+find_package( NUMA )
 ##
 # c/c++ std
 ##
@@ -45,5 +46,7 @@ target_link_libraries( ${APP}
                        raft
                        ${CMAKE_THREAD_LIBS_INIT} 
                        ${CMAKE_SCOTCH_LIBS}
-                       ${CMAKE_RT_LIBS} )
+                       ${CMAKE_RT_LIBS}
+                       shm
+                       ${CMAKE_NUMA_LIBS})
 
