--- a/examples/cppalgo/search/CMakeLists.txt
+++ b/examples/cppalgo/search/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package( Threads )
 # check for Scotch, use if there
 ##
 find_package( Scotch )
+find_package( NUMA )
 ##
 # c/c++ std
 ##
@@ -25,10 +26,11 @@ include_directories( ${CMAKE_SCOTCH_INCS} )
 
 target_link_libraries( ${APP} 
                        raft
-                       shm
                        ${CMAKE_THREAD_LIBS_INIT} 
                        ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_RT_LIBS}
+                       shm
+                       ${CMAKE_NUMA_LIBS}
                        )
 
 file( COPY alice.txt
