--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -73,6 +73,8 @@ set( TESTAPPS
      streamManipFourA
      streamManipFourB
      streamManipFourC
+     streamManipZeroA
+     streamManipZeroB
      )
 
 
