interim update, writing test cases to make sure all possible combinations of reductions for stream op grammar are represented by templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,10 @@ set( TESTAPPS
      streamManipFourC
      streamManipZeroA
      streamManipZeroB
+     streamManipZeroC
+     streamManipZeroD
+     streamManipZeroE
+     streamManipZeroF
         ) 
 
 
