--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ if( USEQTHREAD )
 set( PKG_CFLAGS_PROTO "${PKG_CFLAGS_PROTO} -DUSEQTHREAD=1" )
 endif( USEQTHREAD )
 
+set( PKG_CFLAGS_PROTO "${PKG_CFLAGS_PROTO} ${Boost_INCLUDE_DIRS}" )
+
 set( PKG_CFLAGS ${PKG_CFLAGS_PROTO} )
 
 
@@ -177,7 +179,7 @@ foreach( HFILE ${MAINHEADERS} )
  install( FILES ${CMAKE_SOURCE_DIR}/${HFILE}  DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
 endforeach( HFILE ${MAINHEADERS} )
 
-set( _PKG_CONFIG_LIBS  "${CMAKE_SCOTCH_LIBS} ${CMAKE_QTHREAD_LIBS} ${CMAKE_NUMA_LIBS} ${CMAKE_RT_LIBS} -lshm" )
+set( _PKG_CONFIG_LIBS  "${CMAKE_SCOTCH_LIBS} ${CMAKE_QTHREAD_LIBS} ${CMAKE_NUMA_LIBS} ${CMAKE_RT_LIBS} -lshm ${Boost_LIBRARIES}" )
 
 # Generate the pkg-config file.
 CONFIGURE_FILE(
