fixed bug found while respondin to issue #26, dynammic allocate didn't honor fixed port size, applying fix to dev branch as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      doesntFitInCacheLine
      isInlineClass
      isExtArray
+    fixedAllocate
      isExtAlloc 
      isInlineNonClass 
      allocateSendPush 
