--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -16,71 +16,73 @@ find_package( NUMA )
 
 set( TESTAPPS 
     allocate 
-    portTypeException 
-    dynallocate 
-    stdlibsupport 
-    split 
-     join 
-     lambdatest 
-     allocate_s 
-     foreach 
-     peekrange  
-     partitionTest 
-     parallel 
-     peek 
-     bracketsTest 
-     chain 
-     splitchain 
-     staticLongSplitChain 
-     staticSplitJoin 
-     staticSplitChainJoin 
-     staticJoin 
-     staticContJoin 
-     fitInCacheLine
-     isExtClass
-     doesntFitInCacheLine
-     isInlineClass
-     isExtArray
-     isExtAlloc 
-     isInlineNonClass 
-     allocateSendPush 
-     allocateSendRandomPush 
-     allocatePopPush 
-     allocatePopInternal 
-     allocatePopInternalObject
-     allocatePopExternal 
-     prefetchEffective 
-     parallelchain 
-     splitKsetCont
-     ksetContContJoin
-     KsetJoin
-     splitKsetJoin
-     ksettest 
-     poolThreadRaftManip 
-     fixedMatchTest 
-     splitchainRetStruct 
-     staticContJoinRetStruct
-     staticJoinRetStruct
-     staticLongSplitChainRetStruct
-     staticSplitChainJoinRetStruct
-     staticSplitJoinRetStruct 
-     chainMultiplePorts 
-     streamManipOne
-     streamManipTwo
-     streamManipThree
-     streamManipThreeA
-     streamManipFour
-     streamManipFourA
-     streamManipFourB
-     streamManipFourC
-     streamManipZeroA
-     streamManipZeroB
-     streamManipZeroC
-     streamManipZeroD
-     streamManipZeroE
-     streamManipZeroF
-     streamManipZeroG
-     fixedAllocate
+    allocateRefWrapperOneRHS
+    allocateRefWrapperOneLHS
+#    portTypeException 
+#    dynallocate 
+#    stdlibsupport 
+#    split 
+#     join 
+#     lambdatest 
+#     allocate_s 
+#     foreach 
+#     peekrange  
+#     partitionTest 
+#     parallel 
+#     peek 
+#     bracketsTest 
+#     chain 
+#     splitchain 
+#     staticLongSplitChain 
+#     staticSplitJoin 
+#     staticSplitChainJoin 
+#     staticJoin 
+#     staticContJoin 
+#     fitInCacheLine
+#     isExtClass
+#     doesntFitInCacheLine
+#     isInlineClass
+#     isExtArray
+#     isExtAlloc 
+#     isInlineNonClass 
+#     allocateSendPush 
+#     allocateSendRandomPush 
+#     allocatePopPush 
+#     allocatePopInternal 
+#     allocatePopInternalObject
+#     allocatePopExternal 
+#     prefetchEffective 
+#     parallelchain 
+#     splitKsetCont
+#     ksetContContJoin
+#     KsetJoin
+#     splitKsetJoin
+#     ksettest 
+#     poolThreadRaftManip 
+#     fixedMatchTest 
+#     splitchainRetStruct 
+#     staticContJoinRetStruct
+#     staticJoinRetStruct
+#     staticLongSplitChainRetStruct
+#     staticSplitChainJoinRetStruct
+#     staticSplitJoinRetStruct 
+#     chainMultiplePorts 
+#     streamManipOne
+#     streamManipTwo
+#     streamManipThree
+#     streamManipThreeA
+#     streamManipFour
+#     streamManipFourA
+#     streamManipFourB
+#     streamManipFourC
+#     streamManipZeroA
+#     streamManipZeroB
+#     streamManipZeroC
+#     streamManipZeroD
+#     streamManipZeroE
+#     streamManipZeroF
+#     streamManipZeroG
+#     fixedAllocate
      )
 
 
