more interim updates, in process of merging to beta :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,82 +88,15 @@ set( PKG_CFLAGS ${PKG_CFLAGS_PROTO} )
 add_subdirectory( testsuite )
 enable_testing()
 set( TESTAPPS 
-        allocate 
-        allocateRefWrapperOneRHS
-        allocateRefWrapperOneLHS
-        chain 
-        chainMultiplePorts 
-        chainDynamic
-        chainMultiplePortsDynamic 
-#        portTypeException 
-#        dynallocate 
-#        stdlibsupport 
-#        split 
-#        join 
-#        lambdatest 
-#        allocate_s 
-#        foreach 
-#        peekrange 
-#        partitionTest 
-#        parallel 
-#        peek
-#        bracketsTest 
-#        uniform 
-#        gamma 
-#        gaussian 
-#        exponential 
-#        sequential 
-#        splitchain
-#        staticLongSplitChain 
-#        staticSplitJoin 
-#        staticSplitChainJoin 
-#        staticJoin 
-#        staticContJoin
-#        fitInCacheLine
-#        isExtClass
-#        doesntFitInCacheLine
-#        isInlineClass
-#        isExtArray
-#        isExtAlloc 
-#        isInlineNonClass 
-#        allocateSendPush 
-#        allocateSendRandomPush 
-#        allocatePopPush 
-#        allocatePopInternal
-#        allocatePopInternalObject
-#        allocatePopExternal
-#        prefetchEffective 
-#        parallelchain 
-#        ksettest
-#        splitKsetCont
-#        KsetJoin
-#        ksetContContJoin
-#        splitKsetJoin 
-#        fixedMatchTest
-#        poolThreadRaftManip 
-#        forceProcess 
-#        splitchainRetStruct
-#        staticContJoinRetStruct
-#        staticJoinRetStruct 
-#        staticLongSplitChainRetStruct
-#        staticSplitChainJoinRetStruct
-#        staticSplitJoinRetStruct 
-#     streamManipOne
-#     streamManipTwo
-#     streamManipThree
-#     streamManipThreeA
-#     streamManipFour
-#     streamManipFourA
-#     streamManipFourB
-#     streamManipFourC
-#     streamManipZeroA
-#     streamManipZeroB
-#     streamManipZeroC
-#     streamManipZeroD
-#     streamManipZeroE
-#     streamManipZeroF
-#     streamManipZeroG
-#     fixedAllocate
+    allocate 
+    allocateRefWrapperOneRHS
+    allocateRefWrapperOneLHS
+    chain 
+    chainMultiplePorts 
+    chainDynamic
+    chainMultiplePortsDynamic 
+    portTypeException 
+    dynallocate 
         ) 
 
 
