--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -22,9 +22,8 @@ set( TESTAPPS
     chainMultiplePorts 
     chainDynamic
     chainMultiplePortsDynamic 
-    
-#    portTypeException 
-#    dynallocate 
+    portTypeException 
+    dynallocate 
 #    stdlibsupport 
 #    split 
 #     join 
