yet more updates, bug fix to split range method, still adding to streamparse and parsemap, came up with a simpler way to do the parse that supports the grammar properly so will push that with the next batch of updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,9 @@ set( TESTAPPS
     allocatePopExternal 
     prefetchEffective 
     streamManipZeroA
+    split
+    join
+    splitchain
         ) 
 
 
