Fix for Issue #40 to remove macros that are no longer needed, closing issue #40. Currently working on removing all macros from the code where possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,9 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      staticSplitChainJoinRetStruct
      staticSplitJoinRetStruct 
      chainMultiplePorts
-     fixedAllocate ) 
+     fixedAllocate 
+     #disconnectedGraph 
+     ) 
 
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
