Fix for Issue  #43, added conditional statement in port.cpp where the function should have thrown an exception when the port count was zero, also pulled in demangle code so that exception can throw an error that has the class name. Will apply to the dev branch in a few

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      staticSplitJoinRetStruct 
      chainMultiplePorts
      fixedAllocate 
+     noPortException
      #disconnectedGraph 
      ) 
 
