--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -47,6 +47,7 @@ set( TESTAPPS allocate
      staticSplitJoinRetStruct 
      chainMultiplePorts
      fixedAllocate
+     noPortException
      #disconnectedGraph 
      )
 
