fix to port connectivity checker, now checks in linear time and covering all ports versus just those found in BFS traversal, also began renaming all std::string to raft::port_key_type so that we can eventually go to a faster statically indexed indexing scheme (constant time improvement)

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -69,6 +69,8 @@ set( TESTAPPS
 #     staticLongSplitChainRetStruct
 #     staticSplitChainJoinRetStruct
 #     staticSplitJoinRetStruct 
+      noPortException
+      disconnectedGraph
      )
 
 
