updates pulled over from dev branch to fix the double port initialize bug and the unconnected port bug, next up will be fixing the missed parallel kernel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      chainMultiplePorts
      fixedAllocate 
      noPortException
-     #disconnectedGraph 
+     twiceAdd
+     disconnectedGraph 
      ) 
 
 if( BUILDRANDOM )
