--- a/.travis.yml
+++ b/.travis.yml
@@ -48,14 +48,9 @@ addons:
       - xz-utils
       - libtool
       - libnuma-dev
+      - cmake
 
 before_script:
-    - wget --no-check-certificate https://cmake.org/files/v3.10/cmake-3.10.0-rc2-Linux-x86_64.tar.gz
-    - tar -zxf cmake-3.10.0-rc2-Linux-x86_64.tar.gz
-    - export PATH=$PWD/cmake-3.10.0-rc2-Linux-x86_64/bin/:$PATH
-    - wget --no-check-certificate http://releases.llvm.org/5.0.0/clang+llvm-5.0.0-linux-x86_64-ubuntu16.04.tar.xz;  
-    - tar -xf clang+llvm-5.0.0-linux-x86_64-ubuntu16.04.tar.xz
-    - export PATH=$PWD/clang+llvm-5.0.0-linux-x86_64-ubuntu16.04/bin:$PATH
     - echo $LANG
     - echo $LC_ALL
     - mkdir build
