--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,9 @@ addons:
       - cmake
 
 before_script:
+    - wget --no-check-certificate https://cmake.org/files/v3.5/cmake-3.5.0-Linux-x86_64.tar.gz
+    - tar -zxf cmake-3.5.0-Linux-x86_64.tar.gz
+    - export PATH=$PWD/cmake-3.5.0-Linux-x86_64/bin/:$PATH
     - echo $LANG
     - echo $LC_ALL
     - mkdir build
