more updates, added double port add test to dev testsuite, will dig into staticSPlitChainJoin to figure out parallel start-up bug

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -49,9 +49,9 @@ set( TESTAPPS
     split 
     join 
     splitchain 
+    staticSplitChainJoin 
 #     staticLongSplitChain 
 #     staticSplitJoin 
-#     staticSplitChainJoin 
 #     staticJoin 
 #     staticContJoin 
 #     parallel 
